--- a/src/style.css
+++ b/src/style.css
@@ -233,7 +233,7 @@ a.active, a:hover {
         0 0 10px rgba(0,178,255,1);
 }
 
-.downloadGame a:hover{
+.goToChamps a:hover{
     background: rgba(13, 18, 63, 0.836);
     color: #ffffff;
     border: 5px solid  #d19703dc;
@@ -247,7 +247,7 @@ a.active, a:hover {
 }
 
 
-.downloadGame a{
+.goToChamps a{
     background-color: rgb(0, 198, 226);
     color:black;
     justify-content: center;
@@ -598,7 +598,7 @@ caption {
         height: 60px;
     }
 
-    .downloadGame{
+    .goToChamps{
         display: flex;
         justify-content: center;
     }
@@ -734,7 +734,7 @@ caption {
         float: right;
     }
 
-    .downloadGame a{
+    .goToChamps a{
         margin-left: 27%;
         font-size: 15px;
         margin-bottom: 27%;
